// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Flex"
  data-test-id="cf-ui-flex"
>
  Flex
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Flex my-extra-class"
  data-test-id="cf-ui-flex"
>
  Flex
</div>
`;
